package com.vserdiuk.json.utility;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class JsonUtilityApplication {

	public static void main(String[] args) {
		SpringApplication.run(JsonUtilityApplication.class, args);
	}

}
